Added windows build download

--- a/css/custom.css
+++ b/css/custom.css
@@ -85,6 +85,7 @@ p#loadingInfo {
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
+    width: 560px;
 }
 
 .btn:after {
