--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,34 @@
+/* fonts */
+@font-face {
+    font-family: 'open-sans';
+    src: url('../fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'caviar-dreams';
+    src: url('../fonts/CaviarDreams/CaviarDreams.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* global */
+html {
+    width: 100%;
+    height: 100%;
+    border-top: #0e83cd solid 3px;
+}
+body {
+    font-family: open-sans, Helvetica, Verdana, Arial, sans-serif;
+}
+
+header h1 {
+    font-family: caviar-dreams, Helvetica, Verdana, Arial, sans-serif;
+    font-size: 48px;
+    letter-spacing: 2px;
+}
+
 figure > img {
     width:100%;
 }
@@ -5,6 +36,14 @@ figure > img {
 figure {
     margin: 0px;
     padding: 0px;
+}
+
+.about h1 {
+    margin-top: 0px;
+}
+
+p {
+    font-size: 18px;
 }
 
 /*
